# master-plan

./: .ghci  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  master-plan.cabal  master.plan  stack.yaml
app/: Main.hs
examples/: example1.plan  example2.plan
src/MasterPlan/: Data.hs  Parser.hs
src/MasterPlan/Backend/: Graph.hs  Html.hs  Identity.hs  Text.hs
src/MasterPlan/Internal/: Debug.hs
test/MasterPlan/: Arbitrary.hs  DataSpec.hs  ParserSpec.hs
