name:                master-plan
version:             0.1.0.0
synopsis:            Text based project management tool
-- description:
homepage:            https://github.com/rodrigosetti/master-plan
bug-reports:         https://github.com/rodrigosetti/master-plan/issues
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
stability:           alpha
license:             MIT
license-file:        LICENSE
copyright:           2017 Rodrigo Setti. All rights reserved
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable master-plan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  UnicodeSyntax
  build-depends:       base
                     , master-plan
                     , optparse-applicative

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall
    default-extensions:  UnicodeSyntax
    build-depends:       base
                       , megaparsec == 6.0.*
                       , containers
                       , mtl
    exposed-modules:     MasterPlan.Data
                       , MasterPlan.Parser
                       , MasterPlan.Backend.Identity

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base
                  , master-plan
                  , random
                  , mtl
                  , containers
                  , hspec
                  , QuickCheck
  other-modules:    MasterPlan.DataSpec
                  , MasterPlan.Arbitrary
                  , MasterPlan.ParserSpec
