name:                master-plan
version:             0.3.0
synopsis:            The project management tool for hackers
description:         Master Plan is a tool that parses files that describes
                     projects using a simple and powerful syntax in which
                     project structures are encoded using a special algebra
                     with combinators for specifying the different kinds
                     of dependencies. It also supports estimations of cost and
                     risk, as well as some metadata. The tool is then able
                     to compute the priority of execution that minimizes costs,
                     and also output a nice visual representation of the structure.
                     Becase the plan description is plan text, it's portable
                     and fits well within source control.
homepage:            https://github.com/rodrigosetti/master-plan
bug-reports:         https://github.com/rodrigosetti/master-plan/issues
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
stability:           alpha
license:             MIT
license-file:        LICENSE
copyright:           2017 Rodrigo Setti. All rights reserved
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/rodrigosetti/master-plan.git

executable master-plan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  UnicodeSyntax
  build-depends:       base >= 4.5 && < 5
                     , containers
                     , master-plan
                     , optparse-applicative
                     , text

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall
    default-extensions:  UnicodeSyntax
    build-depends:       base >= 4.5 && < 5
                       , containers
                       , diagrams
                       , diagrams-lib
                       , diagrams-rasterific
                       , megaparsec >= 6.0.0
                       , mtl
                       , text
                       , syb
    exposed-modules:     MasterPlan.Data
                       , MasterPlan.Parser
                       , MasterPlan.Backend.Graph
                       , MasterPlan.Backend.Identity
                       , MasterPlan.Internal.Debug

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >= 4.5 && < 5
                  , QuickCheck
                  , containers
                  , hspec
                  , master-plan
                  , mtl
                  , quickcheck-instances
                  , random
                  , random-shuffle
                  , text
  other-modules:    MasterPlan.DataSpec
                  , MasterPlan.Arbitrary
                  , MasterPlan.ParserSpec
